mutants.out/log/crates__idle-ipc__src__shm.rs_line_101_col_9.log

*** crates/idle-ipc/src/shm.rs:101:9: replace SharedMemory::open -> Result<Self, String> with Ok(Default::default())

*** mutation diff:
--- crates/idle-ipc/src/shm.rs
+++ replace SharedMemory::open -> Result<Self, String> with Ok(Default::default())
@@ -93,60 +93,17 @@
             fd,
             ptr,
             size,
             is_owner: true,
         })
     }
 
     pub fn open(name: &str, size: usize) -> Result<Self, String> {
-        if !is_valid_shm_name(name) {
-            return Err(format!("invalid shm name: {name}"));
-        }
-        if size < std::mem::size_of::<SharedMemoryHeader>() || size > 64 * 1024 * 1024 {
-            return Err(format!("shm size out of range: {size}"));
-        }
-        let c_name = CString::new(name).map_err(|e| e.to_string())?;
-
-        // SAFETY: open existing named object; name validated above.
-        let fd = unsafe { libc::shm_open(c_name.as_ptr(), libc::O_RDWR, 0) };
-        if fd < 0 {
-            return Err(format!(
-                "shm_open (open) failed: {}",
-                std::io::Error::last_os_error()
-            ));
-        }
-
-        // SAFETY: MAP_SHARED; close fd on MAP_FAILED (non-owner does not unlink).
-        let ptr = unsafe {
-            libc::mmap(
-                ptr::null_mut(),
-                size,
-                libc::PROT_READ | libc::PROT_WRITE,
-                libc::MAP_SHARED,
-                fd,
-                0,
-            )
-        };
-        if ptr == libc::MAP_FAILED {
-            let err = std::io::Error::last_os_error();
-            // SAFETY: fd is open and owned by this path only.
-            unsafe {
-                libc::close(fd);
-            }
-            return Err(format!("mmap failed: {err}"));
-        }
-
-        Ok(Self {
-            name: name.to_string(),
-            fd,
-            ptr,
-            size,
-            is_owner: false,
-        })
+        Ok(Default::default()) /* ~ changed by cargo-mutants ~ */
     }
 
     pub fn fd(&self) -> libc::c_int {
         self.fd
     }
 
     pub fn ptr(&self) -> *mut libc::c_void {
         self.ptr


*** /home/jeryd/.rustup/toolchains/1.96.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --package=idle-ipc@0.4.0
warning: /tmp/cargo-mutants-idle-audit-graph-kTM01z.tmp/idle-daemon/Cargo.toml: file `/tmp/cargo-mutants-idle-audit-graph-kTM01z.tmp/idle-daemon/src/main.rs` found to be present in multiple build targets:
  * `bin` target `idle-daemon`
  * `bin` target `idlescreen-daemon`
  * `bin` target `trance-daemon`
warning: /tmp/cargo-mutants-idle-audit-graph-kTM01z.tmp/idle-cli/Cargo.toml: file `/tmp/cargo-mutants-idle-audit-graph-kTM01z.tmp/idle-cli/src/main.rs` found to be present in multiple build targets:
  * `bin` target `idle`
  * `bin` target `idlescreen`
  * `bin` target `trance`
       Fresh libc v0.2.188
       Fresh cfg-if v1.0.4
       Fresh unicode-ident v1.0.24
       Fresh linux-raw-sys v0.12.1
       Fresh bitflags v2.13.1
       Fresh autocfg v1.5.1
       Fresh once_cell v1.21.4
       Fresh fastrand v2.5.0
       Fresh wait-timeout v0.2.1
       Fresh fnv v1.0.7
       Fresh bit-vec v0.8.0
       Fresh quick-error v1.2.3
       Fresh regex-syntax v0.8.11
       Fresh unarray v0.1.4
       Fresh proc-macro2 v1.0.107
       Fresh getrandom v0.3.4
       Fresh getrandom v0.4.3
       Fresh zerocopy v0.8.55
       Fresh bit-set v0.8.0
       Fresh quote v1.0.47
       Fresh rand_core v0.9.5
       Fresh rustix v1.1.4
       Fresh ppv-lite86 v0.2.21
       Fresh syn v2.0.119
       Fresh tempfile v3.27.0
       Fresh num-traits v0.2.19
       Fresh rand_xorshift v0.4.0
       Fresh rand_chacha v0.9.0
       Fresh rand v0.9.5
       Fresh bytemuck_derive v1.11.0
       Fresh rusty-fork v0.3.1
       Fresh bytemuck v1.25.2
       Fresh proptest v1.11.0
       Fresh idle-api v2.3.1 (/tmp/cargo-mutants-idle-audit-graph-kTM01z.tmp/idle-api)
       Dirty idle-ipc v0.4.0 (/tmp/cargo-mutants-idle-audit-graph-kTM01z.tmp/crates/idle-ipc): the file `crates/idle-ipc/src/shm.rs` has changed (1784876883.911482354s, 595006843ns after last build at 1784876883.316475511s)
   Compiling idle-ipc v0.4.0 (/tmp/cargo-mutants-idle-audit-graph-kTM01z.tmp/crates/idle-ipc)
     Running `/home/jeryd/.rustup/toolchains/1.96.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name idle_ipc --edition=2024 crates/idle-ipc/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=a0b8bba603035d0f -C extra-filename=-dbadf11ecf5c7d57 --out-dir /tmp/cargo-mutants-idle-audit-graph-kTM01z.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-idle-audit-graph-kTM01z.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-idle-audit-graph-kTM01z.tmp/target/debug/deps --extern idle_api=/tmp/cargo-mutants-idle-audit-graph-kTM01z.tmp/target/debug/deps/libidle_api-fffa68b90ae709d7.rlib --extern libc=/tmp/cargo-mutants-idle-audit-graph-kTM01z.tmp/target/debug/deps/liblibc-07c3a6f7013cd5d4.rlib --extern proptest=/tmp/cargo-mutants-idle-audit-graph-kTM01z.tmp/target/debug/deps/libproptest-b92098e6fc18f2e8.rlib`
     Running `/home/jeryd/.rustup/toolchains/1.96.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name idle_ipc --edition=2024 crates/idle-ipc/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=f6298ca08a0d4778 -C extra-filename=-72a23dfc47ffc5d4 --out-dir /tmp/cargo-mutants-idle-audit-graph-kTM01z.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-idle-audit-graph-kTM01z.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-idle-audit-graph-kTM01z.tmp/target/debug/deps --extern idle_api=/tmp/cargo-mutants-idle-audit-graph-kTM01z.tmp/target/debug/deps/libidle_api-fffa68b90ae709d7.rmeta --extern libc=/tmp/cargo-mutants-idle-audit-graph-kTM01z.tmp/target/debug/deps/liblibc-07c3a6f7013cd5d4.rmeta`
error[E0277]: the trait bound `SharedMemory: Default` is not satisfied
   --> crates/idle-ipc/src/shm.rs:101:12
    |
101 |         Ok(Default::default()) /* ~ changed by cargo-mutants ~ */
    |            ^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `SharedMemory`
    |
help: consider annotating `SharedMemory` with `#[derive(Default)]`
    |
 15 + #[derive(Default)]
 16 | pub struct SharedMemory {
    |

For more information about this error, try `rustc --explain E0277`.
error: could not compile `idle-ipc` (lib) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/jeryd/.rustup/toolchains/1.96.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name idle_ipc --edition=2024 crates/idle-ipc/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=f6298ca08a0d4778 -C extra-filename=-72a23dfc47ffc5d4 --out-dir /tmp/cargo-mutants-idle-audit-graph-kTM01z.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-idle-audit-graph-kTM01z.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-idle-audit-graph-kTM01z.tmp/target/debug/deps --extern idle_api=/tmp/cargo-mutants-idle-audit-graph-kTM01z.tmp/target/debug/deps/libidle_api-fffa68b90ae709d7.rmeta --extern libc=/tmp/cargo-mutants-idle-audit-graph-kTM01z.tmp/target/debug/deps/liblibc-07c3a6f7013cd5d4.rmeta` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error[E0277]: the trait bound `shm::SharedMemory: Default` is not satisfied
   --> crates/idle-ipc/src/shm.rs:101:12
    |
101 |         Ok(Default::default()) /* ~ changed by cargo-mutants ~ */
    |            ^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `shm::SharedMemory`
    |
help: consider annotating `shm::SharedMemory` with `#[derive(Default)]`
    |
 15 + #[derive(Default)]
 16 | pub struct SharedMemory {
    |

error: could not compile `idle-ipc` (lib test) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/jeryd/.rustup/toolchains/1.96.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name idle_ipc --edition=2024 crates/idle-ipc/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=a0b8bba603035d0f -C extra-filename=-dbadf11ecf5c7d57 --out-dir /tmp/cargo-mutants-idle-audit-graph-kTM01z.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-idle-audit-graph-kTM01z.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-idle-audit-graph-kTM01z.tmp/target/debug/deps --extern idle_api=/tmp/cargo-mutants-idle-audit-graph-kTM01z.tmp/target/debug/deps/libidle_api-fffa68b90ae709d7.rlib --extern libc=/tmp/cargo-mutants-idle-audit-graph-kTM01z.tmp/target/debug/deps/liblibc-07c3a6f7013cd5d4.rlib --extern proptest=/tmp/cargo-mutants-idle-audit-graph-kTM01z.tmp/target/debug/deps/libproptest-b92098e6fc18f2e8.rlib` (exit status: 1)

*** result: Failure(101)
